test/good/functions/line01.px

func f(
    Int x,
    String s,
) def
    print x, s

f(
    3,
    "abc",
)
